# lunch-walk

./: .gitignore  LICENSE  README.md  elm.json  netlify.toml
functions/truck-info/: Cargo.toml
functions/truck-info/src/: main.rs
src/: Main.elm
static/: index.html
web/: .gitignore  elm.json  netlify.toml  package-lock.json  package.json
web/src/: Main.elm
web/static/: index.html
