[package]
edition = "2018"
name = "truck-info"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
http = "0.2.4"
lambda_runtime = "0.4.1"
log = "0.4.14"
simple_logger = "1.11.0"
tokio = "1.6.1"
reqwest = { version = "0.11.6", features = [
    "json",
    "rustls-tls",
], default-features = false }
csv = "1.0.0"